--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -35,8 +35,8 @@
         <!--<Button Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Content="近日公開機能" FontSize="30"/>-->
 
 
-        <Button Grid.Row="0" Grid.Column="3" Content="DEL" FontSize="35" Click="Button_Click"/>
-        <Button Grid.Row="0" Grid.Column="4" Content="AC" FontSize="35" Click="Button_Click"/>
+        <Button Grid.Row="0" Grid.Column="3" Content="DEL" FontSize="35" Click="Button_Click_delete"/>
+        <Button Grid.Row="0" Grid.Column="4" Content="AC" FontSize="35" Click="Button_Click_allclear"/>
         <Button Grid.Row="1" Grid.Column="3" Content="x" FontSize="35" Click="Button_Click_times"/>
         <Button Grid.Row="1" Grid.Column="4" Content="/" FontSize="35" Click="Button_Click"/>
         <Button Grid.Row="2" Grid.Column="3" Content="+" FontSize="35" Click="Button_Click"/>
